--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "type"          : "git",
     "url"           : "https://github.com/mantoni/brout.js.git"
   },
-  "dependency"      : {
+  "dependencies"    : {
     "through"       : "~2.3.4"
   },
   "devDependencies" : {
