--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "node": ">=0.10"
   },
   "scripts": {
-    "lint": "jslint --edition=latest --color \"**/*.js\"",
+    "lint": "jslint --edition=latest --color \"**/!(*bundle|*-test).js\"",
     "pretest": "npm run lint",
-    "test": "browserify -p mocaccino ./test/*.js | phantomic"
+    "test": "browserify -p mocaccino test/brout-test.js | phantomic --debug",
+    "just-test": "browserify -p mocaccino test/brout-test.js | phantomic",
+    "test-client": "npm run pretest && node client-build test/brout-test.js > test/brout-bundle.js",
+    "test-bundle": "browserify test/brout-test.js > test/brout-bundle.js",
+    "phantomBuild": "node phantom-test.js"
   },
   "repository": {
     "type": "git",
