--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brout",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "stdout and stderr for browsers",
   "keywords": [
     "stdout",
@@ -20,13 +20,9 @@
     "node": ">=0.10"
   },
   "scripts": {
-    "lint": "jslint --edition=latest --color \"**/!(*bundle|*-test).js\"",
+    "lint": "jslint --edition=latest --color \"**/*.js\"",
     "pretest": "npm run lint",
-    "test": "browserify -p mocaccino test/brout-test.js | phantomic --debug",
-    "just-test": "browserify -p mocaccino test/brout-test.js | phantomic",
-    "test-client": "npm run pretest && node client-build test/brout-test.js > test/brout-bundle.js",
-    "test-bundle": "browserify test/brout-test.js > test/brout-bundle.js",
-    "phantomBuild": "node phantom-test.js"
+    "test": "browserify -p mocaccino test/brout-test.js | phantomic"
   },
   "repository": {
     "type": "git",
